# Rclone-Service-Tray

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
packaging/appimage/: AppRun
packaging/deb/: control  rclone-service-tray.desktop
rclonetray/: __init__.py  __main__.py  activity_detector.py  app.py  cache_manager.py  config.py  dialogs.py  icons.py  log_manager.py  main.py  main_window.py  notifications.py  rc_client.py  service_model.py  service_parser.py  settings_window.py  systemd_manager.py  theme_manager.py  tray.py
scripts/: build_all.sh  build_appimage.sh  build_deb.sh
tests/: test_activity_detector.py  test_cache_manager.py  test_log_cleanup.py  test_log_manager.py  test_main_window_logic.py  test_rc_client.py  test_service_parser.py  test_tray.py
